<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/navFindCategory"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/find_category"
            app:actionViewClass="android.widget.SearchView" />
        <item
            android:id="@+id/navInvitations"
            android:icon="@drawable/ic_baseline_person_add_24"
            android:title="@string/invitations" />
        <item
            android:id="@+id/navFriends"
            android:icon="@drawable/ic_baseline_people_outline_24"
            android:title="@string/friends" />
        <item
            android:id="@+id/navNotifications"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/notifications" />


    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/user">

            <menu>
                <item
                    android:id="@+id/navProfile"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/navLogout"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>

</menu>