<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/start_background1"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/logo1"
        />



    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:hint="@string/email"
        android:layout_marginHorizontal="15dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="" />


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:text="@string/doesn_t_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_up"
        android:textColor="@color/white" />


</LinearLayout>